Switch to JS ECDSA implementation
cryptocoinjs' eckey library

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "buffertools": ">=1.0.3",
     "bignum": ">=0.4.0",
     "bs58": "0.2.x",
+    "eckey": "0.3.x",
     "step": ">=0.0.4",
     "winston": ">=0.2.6",
     "irc": ">=0.2.1",
